<resources>
    <string name="app_name">Age Of Empires 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="civilizations">Civilizations</string>
    <string name="structures">Structures</string>
    <string name="technologies">Technologies</string>
    <string name="technology">Technology</string>
    <string name="units">Units</string>
    <string name="civil_name">Civilization Name</string>
    <string name="structures_name">Structures Name</string>
    <string name="struct_exp">Structures Expansion</string>
    <string name="struct_age">Structures Age</string>
    <string name="stuct_wood_cost">Structures Wood Cost</string>
    <string name="hitpoint">Hotpoint Id</string>
</resources>
